Fixing compatible by z-index with jcatalog-bootstrap inputs

--- a/src/client/components/Select/SelectCustom.less
+++ b/src/client/components/Select/SelectCustom.less
@@ -1,4 +1,6 @@
 .opuscapita_react-select--2-0-0 {
+  z-index: 3;
+  
   .opuscapita_react-select {
     &__control {
       border-radius: 0;
